fix: Collision with too long username

--- a/frontend/scss/profile.scss
+++ b/frontend/scss/profile.scss
@@ -31,6 +31,9 @@
         margin: 0;
         color: colors.$text-hover-color;
         font-size: 2em;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
 
     span {
@@ -54,6 +57,7 @@
     justify-content: center;
     flex-direction: column;
     gap: 20px;
+    max-width: 250px;
 }
 
 
